--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
   --color-text-main: #333;
   --color-text-sub: #999;
-  --color-text-unpainnted: #fff;
+  --color-text-unpainted: #fff;
   --color-text-error: #f33;
   --color-bg-main: #fff;
   --color-bg-sub: #f3f3f3;
